# wasmGL

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  server.py
build-native/: render
build-native/dependencies/glfw/: Makefile  cmake_uninstall.cmake
build-native/dependencies/glfw/src/: Makefile
build-wasm/: render.data  render.js  render.wasm  test.html
dependencies/glad/: CMakeLists.txt
dependencies/glad/src/: glad.cpp
include/: camera.hpp  engine.hpp  helper.hpp  logger.hpp  model.hpp  render.hpp  renderable.hpp  resources.hpp  scene.hpp  scenegraph.hpp  shader.hpp  timer.hpp  transform.hpp  typemap.hpp  window.hpp
platform/OpenGL/: OpenGLShader.cpp
resources/: index.html
resources/shaders/: 1.model_loading.fs  1.model_loading.vs
shaders/: web_basic.frag  web_basic.vert
src/: Cmakelists.txt  engine.cpp  main.cpp  model.cpp  render.cpp  renderable.cpp  resources.cpp  scene.cpp  scene.hpp  scenegraph.cpp  shader.cpp  timer.cpp  transform.cpp  window.cpp
src/platform/: CMakeLists.txt
src/platform/OpenGL/include/: OpenGLShader.hpp  OpenGLWindow.hpp
src/platform/OpenGL/src/: OpenGLShader.cpp  OpenGLWindow.cpp
